objects/Cart__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>CartItem__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>CartItem__c.Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <label>CartId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>CartItem__c.Quantity__c</summarizedField>
        <summaryForeignKey>CartItem__c.Cart__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cart</label>
    <nameField>
        <label>Cart#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>